Fixed email on mobile, and image resizing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -239,7 +239,7 @@
   }
   
   .doanImg {
-    max-width: 355px;
+    max-width: 350px;
     margin-bottom: 5%;
   }
   
